Build with Bach